--- a/app/templates/pipe-item.html
+++ b/app/templates/pipe-item.html
@@ -25,27 +25,9 @@
     </div>
 
     <div class="right small-6 columns">
-      <div class="cog-box">
-        <a href="#" class="button dropdown" data-dropdown="abc">
-          <i class="title fa fa-cog"></i>
-        </a>
-        <ul class="f-dropdown" id="abc" data-dropdown-content>
-          <li>
-            <a class="" href="#" data-name="action" data-value="enable-google">Enable Google login</a>
-          </li>
-          <li>
-            <a class="" href="#" data-name="action" data-value="remove-avatar">Remove profile picture</a>
-          </li>
-          <li>
-            <a class="" href="#" data-name="action" data-value="change-password">Change password</a>
-          </li>
-          <li class="divider"></li>
-          <li>
-            <a class="" href="#" data-name="action" data-value="close-account">Close account</a>
-          </li>
-        </ul>
-      </div>
       <button class="button green wide right sync"><i class="fa fa-refresh"></i>Sync now</button>
+      <div class="cog-box right"></ul>
+      </div>
     </div>
 
   </div>
