--- a/app/styles/_defaultstyles.scss
+++ b/app/styles/_defaultstyles.scss
@@ -20,3 +20,35 @@ a {
     color: $text-color;
   }
 }
+
+input[type="text"],
+input[type="password"],
+input[type="date"],
+input[type="datetime"],
+input[type="email"],
+input[type="number"],
+input[type="search"],
+input[type="tel"],
+input[type="time"],
+input[type="url"],
+textarea,
+select:not(.default) {
+  display: block;
+  margin: 0;
+  width: 100%;
+  border: none;
+  padding: 10px 18px 11px;
+  background-color: white;
+  font-size: $base-font-size * 1.2;
+  font-family: "Open Sans", Arial, sans-serif;
+  color: #222;
+  line-height: normal !important;
+  height: auto;
+  @include box-shadow(rgba(128, 128, 128, 0.2) 0 1px 3px);
+  @include transition(none);
+  &:focus {
+    outline: 3px auto #dddddd;
+    background: white;
+    @include box-shadow(rgba(128, 128, 128, 0.2) 0 1px 3px);
+  }
+}
