--- a/app/templates/pipe-item.html
+++ b/app/templates/pipe-item.html
@@ -11,6 +11,137 @@
       <p class="description">
         <%- model.get('description') %>
       </p>
+    </div>
+
+    <div class="right small-6 columns">
+      <button class="button green wide right sync"><i class="fa fa-refresh"></i>Sync now</button>
+      <div class="cog-box right">
+      </div>
+    </div>
+
+    <div class="small-24 columns">
+
+      <div class="manual-picker">
+        <div class="filter">
+          <input type="text" name="filter" placeholder="Filter objects" />
+        </div>
+        <div class="table-container">
+          <table class="data-table">
+            <thead>
+              <tr>
+                <th class="col-checkbox">
+                  <div class="button checkbox">
+                    <input type="checkbox" name="mark" class="custom checkbox" />
+                    <span class="checkbox"></span>
+                  </div>
+                </th>
+                <th class="col-fullname">Name</th>
+                <th class="col-email">Email</th>
+              </tr>
+            </thead>
+            <tbody>
+              <tr class="entry">
+                <td class="col-checkbox">
+                  <div class="button checkbox">
+                    <input type="checkbox" name="mark" class="custom checkbox" />
+                    <span class="checkbox"></span>
+                  </div>
+                </td>
+                <td class="col-fullname">
+                  <span class="entry-fullname" title="Aa">Aa</span>
+                </td>
+                <td class="col-email">
+                  <span class="entry-email" title="aa@aa.ee">aa@aa.ee</span>
+                </td>
+              </tr>
+              <tr class="entry">
+                <td class="col-checkbox">
+                <div class="button checkbox">
+                  <input type="checkbox" name="mark" class="custom checkbox" />
+                  <span class="checkbox"></span>
+                </div>
+                </td>
+                <td class="col-fullname">
+                  <span class="entry-fullname" title="Aa">Aa</span>
+                </td>
+                <td class="col-email">
+                  <span class="entry-email" title="aa@aa.ee">aa@aa.ee</span>
+                </td>
+              </tr>
+              <tr class="entry">
+                <td class="col-checkbox">
+                <div class="button checkbox">
+                  <input type="checkbox" name="mark" class="custom checkbox" />
+                  <span class="checkbox"></span>
+                </div>
+                </td>
+                <td class="col-fullname">
+                  <span class="entry-fullname" title="Aa">Aa</span>
+                </td>
+                <td class="col-email">
+                  <span class="entry-email" title="aa@aa.ee">aa@aa.ee</span>
+                </td>
+              </tr>
+              <tr class="entry">
+                <td class="col-checkbox">
+                <div class="button checkbox">
+                  <input type="checkbox" name="mark" class="custom checkbox" />
+                  <span class="checkbox"></span>
+                </div>
+                </td>
+                <td class="col-fullname">
+                  <span class="entry-fullname" title="Aa">Aa</span>
+                </td>
+                <td class="col-email">
+                  <span class="entry-email" title="aa@aa.ee">aa@aa.ee</span>
+                </td>
+              </tr>
+              <tr class="entry">
+                <td class="col-checkbox">
+                <div class="button checkbox">
+                  <input type="checkbox" name="mark" class="custom checkbox" />
+                  <span class="checkbox"></span>
+                </div>
+                </td>
+                <td class="col-fullname">
+                  <span class="entry-fullname" title="Aa">Aa</span>
+                </td>
+                <td class="col-email">
+                  <span class="entry-email" title="aa@aa.ee">aa@aa.ee</span>
+                </td>
+              </tr>
+              <tr class="entry">
+                <td class="col-checkbox">
+                <div class="button checkbox">
+                  <input type="checkbox" name="mark" class="custom checkbox" />
+                  <span class="checkbox"></span>
+                </div>
+                </td>
+                <td class="col-fullname">
+                  <span class="entry-fullname" title="Aa">Aa</span>
+                </td>
+                <td class="col-email">
+                  <span class="entry-email" title="aa@aa.ee">aa@aa.ee</span>
+                </td>
+              </tr>
+              <tr class="entry">
+                <td class="col-checkbox">
+                <div class="button checkbox">
+                  <input type="checkbox" name="mark" class="custom checkbox" />
+                  <span class="checkbox"></span>
+                </div>
+                </td>
+                <td class="col-fullname">
+                  <span class="entry-fullname" title="Aa">Aa</span>
+                </td>
+                <td class="col-email">
+                  <span class="entry-email" title="aa@aa.ee">aa@aa.ee</span>
+                </td>
+              </tr>
+            </tbody>
+          </table>
+        </div>
+      </div>
       <p class="meta">
         Last import:
         <span class="last-sync"><%- model.get('last_sync').date %></span>
@@ -22,12 +153,7 @@
           <% } %>
         </span>
       </p>
-    </div>
 
-    <div class="right small-6 columns">
-      <button class="button green wide right sync"><i class="fa fa-refresh"></i>Sync now</button>
-      <div class="cog-box right"></ul>
-      </div>
     </div>
 
   </div>
