--- a/app/styles/app.scss
+++ b/app/styles/app.scss
@@ -68,6 +68,12 @@
             background: $green;
           }
         }
+        &.in_progress {
+          color: $orange;
+          .dot {
+            background: $orange;
+          }
+        }
       }
     }
     .button.sync {
