--- a/app/templates/pipe-item.html
+++ b/app/templates/pipe-item.html
@@ -21,137 +21,10 @@
 
     <div class="small-24 columns">
 
-      <div class="manual-picker">
-        <div class="filter">
-          <input type="text" name="filter" placeholder="Filter objects" />
-        </div>
-        <div class="table-container">
-          <table class="data-table">
-            <thead>
-              <tr>
-                <th class="col-checkbox">
-                  <div class="button checkbox">
-                    <input type="checkbox" name="mark" class="custom checkbox" />
-                    <span class="checkbox"></span>
-                  </div>
-                </th>
-                <th class="col-fullname">Name</th>
-                <th class="col-email">Email</th>
-              </tr>
-            </thead>
-            <tbody>
-              <tr class="entry">
-                <td class="col-checkbox">
-                  <div class="button checkbox">
-                    <input type="checkbox" name="mark" class="custom checkbox" />
-                    <span class="checkbox"></span>
-                  </div>
-                </td>
-                <td class="col-fullname">
-                  <span class="entry-fullname" title="Aa">Aa</span>
-                </td>
-                <td class="col-email">
-                  <span class="entry-email" title="aa@aa.ee">aa@aa.ee</span>
-                </td>
-              </tr>
-              <tr class="entry">
-                <td class="col-checkbox">
-                <div class="button checkbox">
-                  <input type="checkbox" name="mark" class="custom checkbox" />
-                  <span class="checkbox"></span>
-                </div>
-                </td>
-                <td class="col-fullname">
-                  <span class="entry-fullname" title="Aa">Aa</span>
-                </td>
-                <td class="col-email">
-                  <span class="entry-email" title="aa@aa.ee">aa@aa.ee</span>
-                </td>
-              </tr>
-              <tr class="entry">
-                <td class="col-checkbox">
-                <div class="button checkbox">
-                  <input type="checkbox" name="mark" class="custom checkbox" />
-                  <span class="checkbox"></span>
-                </div>
-                </td>
-                <td class="col-fullname">
-                  <span class="entry-fullname" title="Aa">Aa</span>
-                </td>
-                <td class="col-email">
-                  <span class="entry-email" title="aa@aa.ee">aa@aa.ee</span>
-                </td>
-              </tr>
-              <tr class="entry">
-                <td class="col-checkbox">
-                <div class="button checkbox">
-                  <input type="checkbox" name="mark" class="custom checkbox" />
-                  <span class="checkbox"></span>
-                </div>
-                </td>
-                <td class="col-fullname">
-                  <span class="entry-fullname" title="Aa">Aa</span>
-                </td>
-                <td class="col-email">
-                  <span class="entry-email" title="aa@aa.ee">aa@aa.ee</span>
-                </td>
-              </tr>
-              <tr class="entry">
-                <td class="col-checkbox">
-                <div class="button checkbox">
-                  <input type="checkbox" name="mark" class="custom checkbox" />
-                  <span class="checkbox"></span>
-                </div>
-                </td>
-                <td class="col-fullname">
-                  <span class="entry-fullname" title="Aa">Aa</span>
-                </td>
-                <td class="col-email">
-                  <span class="entry-email" title="aa@aa.ee">aa@aa.ee</span>
-                </td>
-              </tr>
-              <tr class="entry">
-                <td class="col-checkbox">
-                <div class="button checkbox">
-                  <input type="checkbox" name="mark" class="custom checkbox" />
-                  <span class="checkbox"></span>
-                </div>
-                </td>
-                <td class="col-fullname">
-                  <span class="entry-fullname" title="Aa">Aa</span>
-                </td>
-                <td class="col-email">
-                  <span class="entry-email" title="aa@aa.ee">aa@aa.ee</span>
-                </td>
-              </tr>
-              <tr class="entry">
-                <td class="col-checkbox">
-                <div class="button checkbox">
-                  <input type="checkbox" name="mark" class="custom checkbox" />
-                  <span class="checkbox"></span>
-                </div>
-                </td>
-                <td class="col-fullname">
-                  <span class="entry-fullname" title="Aa">Aa</span>
-                </td>
-                <td class="col-email">
-                  <span class="entry-email" title="aa@aa.ee">aa@aa.ee</span>
-                </td>
-              </tr>
-            </tbody>
-          </table>
-        </div>
+      <div class="step-container">
       </div>
+
       <p class="meta">
-        Last import:
-        <span class="last-sync"><%- model.get('last_sync').date %></span>
-        <span class="status <%- model.get('status').type %>">
-          <i class="dot"></i>
-          <%- model.get('status').message %>
-          <% if(model.get('last_sync').log_url) { %>
-            <a href="<%- model.get('last_sync').log_url %>" class="blue-text underline">View log for details</a>
-          <% } %>
-        </span>
       </p>
 
     </div>
