--- a/app/styles/_util.scss
+++ b/app/styles/_util.scss
@@ -40,3 +40,11 @@
 .underline {
   text-decoration: underline;
 }
+
+.spinning, .spinning-container .fa-refresh {
+  // TODO: upgrade compass & use that instead
+  -moz-animation: spin 2s infinite linear;
+  -o-animation: spin 2s infinite linear;
+  -webkit-animation: spin 2s infinite linear;
+  animation: spin 2s infinite linear;
+}
