--- a/app/templates/steps/manual-picker.html
+++ b/app/templates/steps/manual-picker.html
@@ -37,5 +37,5 @@
       </tbody>
     </table>
   </div>
-  <button class="button submit right">Sync</button>
+  <button class="button submit right">Next &raquo;</button>
 </div>
