--- a/app/templates/pipe-item-meta.html
+++ b/app/templates/pipe-item-meta.html
@@ -16,3 +16,15 @@
   <% } %>
 
 </span>
+
+<% if(model.get('configured')) { %>
+  <span class="configured right">
+    <i class="dot"></i> Configured
+  </span>
+<% } %>
+
+<% if(model.collection.integration.get('authorized')) { %>
+  <span class="authorized right">
+    <i class="dot"></i> Authorized
+  </span>
+<% } %>
