--- a/app/templates/pipe-item.html
+++ b/app/templates/pipe-item.html
@@ -1,6 +1,10 @@
+<div class="loading">
+  <i class="fa fa-refresh spinning"></i>
+</div>
+
 <div class="small-24 columns large-container light">
 
-  <div class="left small-18 columns">
+  <div class="left small-17 columns">
     <p class="name bigger-text space-after">
       <%- model.get('name') %>
       <% if(model.get('automatic')) { %>
@@ -12,7 +16,7 @@
     </p>
   </div>
 
-  <div class="right small-6 columns">
+  <div class="right small-7 columns">
     <button class="button green wide right sync"><i class="fa fa-refresh"></i><span class="button-label">Sync now</span></button>
     <div class="cog-box right">
     </div>
