Manual picker filtering and checkboxing

--- a/app/templates/steps/manual-picker.html
+++ b/app/templates/steps/manual-picker.html
@@ -1,7 +1,7 @@
 <p class="title bigger-text">Select objects to import</p>
 <div class="manual-picker">
   <div class="filter">
-    <input type="text" name="filter" placeholder="Filter objects" />
+    <input type="text" name="filter" placeholder="Filter objects" class="filter" />
   </div>
   <div class="table-container">
     <table class="data-table">
