Log display & dummy method

--- a/app/templates/pipe-item-meta.html
+++ b/app/templates/pipe-item-meta.html
@@ -12,7 +12,7 @@
   <%- model.statusMessage() %>
 
   <% if(model.logLink()) { %>
-    <a href="<%- model.logLink() %>" class="blue-text underline">View log for details</a>
+    <a href="<%- model.logLink() %>" class="blue-text underline log">View log for details</a>
   <% } %>
 
 </span>
