--- a/app/templates/pipe-item.html
+++ b/app/templates/pipe-item.html
@@ -27,6 +27,11 @@
     <div class="step-container">
     </div>
 
+    <div class="log-container">
+      <a href="#" class="close-log"><i class="fa fa-times"></i>close log</a>
+      <pre></pre>
+    </div>
+
     <p class="meta">
     </p>
 
