Hide log button as needed

--- a/app/templates/pipe-item-meta.html
+++ b/app/templates/pipe-item-meta.html
@@ -11,7 +11,7 @@
 
   <%- model.statusMessage() %>
 
-  <% if(model.logLink()) { %>
+  <% if(model.logLink() && model.status() != 'running') { %>
     <a href="<%- model.logLink() %>" class="blue-text underline log">View log for details</a>
   <% } %>
 
