Configurable title for manual picker step

--- a/app/templates/steps/manual-picker.html
+++ b/app/templates/steps/manual-picker.html
@@ -1,4 +1,4 @@
-<p class="title bigger-text">Select objects to import</p>
+<p class="title bigger-text"><%= title %></p>
 <div class="manual-picker">
   <div class="filter">
     <input type="text" name="filter" placeholder="Filter objects" class="filter" />
