--- a/app/templates/pipe-item.html
+++ b/app/templates/pipe-item.html
@@ -2,6 +2,10 @@
   <i class="fa fa-refresh spinning"></i>
 </div>
 
+<div class="broken">
+  <i class="fa fa-exclamation-triangle"></i>
+</div>
+
 <div class="small-24 columns large-container light">
 
   <div class="left small-17 columns">
