--- a/app/templates/pipe-item.html
+++ b/app/templates/pipe-item.html
@@ -21,9 +21,9 @@
   </div>
 
   <div class="right small-7 columns">
-    <button class="button green wide right sync"><i class="fa fa-refresh"></i><span class="button-label">Sync now</span></button>
-    <div class="cog-box right">
-    </div>
+    <button class="button green-bg wide right sync"><i class="fa fa-refresh"></i><span class="button-label">Sync now</span></button>
+    <div class="cog-box right"></div>
+    <button class="button white-bg wide right cancel"><i class="fa fa-times"></i><span class="button-label">Cancel</span></button>
   </div>
 
   <div class="small-24 columns">
