--- a/app/templates/steps/account-selector.html
+++ b/app/templates/steps/account-selector.html
@@ -1,7 +1,7 @@
 <table class="data-table account-selection">
   <thead>
     <tr>
-      <th class="col-name">Account</th>
+      <th class="col-name">Choose your account</th>
       <th class="col-choose"></th>
     </tr>
   </thead>
