Disabled premium pipes with overlay & added parent frame baseUrl handling

--- a/app/templates/pipe-item.html
+++ b/app/templates/pipe-item.html
@@ -6,6 +6,10 @@
   <i class="fa fa-exclamation-triangle"></i>
 </div>
 
+<div class="premium-overlay">
+  <a href="<%= baseUrl %>#subscription" target="_parent" class="button secondary wide right go-pro"><span class="button-label">&raquo; Go Pro</span></a>
+</div>
+
 <div class="small-24 columns large-container light">
 
   <div class="left small-17 columns">
