--- a/app/styles/app.scss
+++ b/app/styles/app.scss
@@ -34,7 +34,7 @@
       position: relative;
       margin-top: 10px;
       overflow: hidden;
-      .large-container {
+      .large-container, .premium-overlay {
         padding: 25px 30px;
       }
       .loading, .broken {
@@ -72,6 +72,30 @@
         .cog-box {
           display: none !important;
         }
+      }
+      &.premium {
+        .meta {
+          display: none;
+        }
+        p.description {
+          margin-bottom: 0;
+        }
+        .premium-overlay {
+          display: block;
+        }
+        .button.sync, .button.cancel {
+          display: none;
+        }
+      }
+      .premium-overlay {
+        display: none;
+        position: absolute;
+        z-index: 1;
+        top: 0;
+        left: 0;
+        right: 0;
+        bottom: 0;
+        background: rgba(250,250,250,.6);
       }
     }
     .meta {
