Incomplete oauth1 and freshbooks users pipe support

--- a/app/styles/_defaultstyles.scss
+++ b/app/styles/_defaultstyles.scss
@@ -37,7 +37,7 @@ select:not(.default) {
   margin: 0;
   width: 100%;
   border: none;
-  padding: 10px 18px 11px;
+  padding: 1rem 1.8rem 1.1rem;
   background-color: white;
   font-size: $base-font-size * 1.2;
   font-family: "Open Sans", Arial, sans-serif;
