--- a/app/templates/steps/account-selector.html
+++ b/app/templates/steps/account-selector.html
@@ -1,4 +1,4 @@
-<table class="data-table account-selection">
+<table class="data-table account-selector">
   <thead>
     <tr>
       <th class="col-name">Choose your account</th>
