--- a/app/styles/app.scss
+++ b/app/styles/app.scss
@@ -157,28 +157,6 @@
         vertical-align: middle;
       }
     }
-    .account-selection {
-      td, th {
-        padding-left: 20px;
-        padding-right: 20px;
-      }
-    }
-    .manual-picker {
-      .filter {
-        margin-bottom: 10px;
-      }
-      .table-container {
-        max-height: 300px;
-        overflow-x: hidden;
-        overflow-y: auto;
-        border-top: 1px solid #eee;
-        border-bottom: 1px solid #eee;
-        margin-bottom: 20px;
-        table {
-          margin: 0;
-        }
-      }
-    }
     .log-container {
       position: relative;
       display: none;
@@ -205,6 +183,40 @@
         }
       }
     }
+  }
+}
+
+.account-selector {
+  td, th {
+    padding-left: 20px;
+    padding-right: 20px;
+  }
+}
+
+.manual-picker {
+  .filter {
+    margin-bottom: 10px;
+  }
+  .table-container {
+    max-height: 300px;
+    overflow-x: hidden;
+    overflow-y: auto;
+    border-top: 1px solid #eee;
+    border-bottom: 1px solid #eee;
+    margin-bottom: 20px;
+    table {
+      margin: 0;
+    }
+  }
+}
+
+.oauth1-account-selector {
+  .input-suffix {
+    padding: 1rem .6rem 1.1rem;
+    font-size: $base-font-size * 1.2;
+    font-weight: $semibold;
+    color: $gray-dark;
+    line-height: normal;
   }
 }
 
