--- a/app/styles/_components.scss
+++ b/app/styles/_components.scss
@@ -298,3 +298,50 @@ span.checkbox {
     }
   }
 }
+
+.popdown {
+  position: absolute;
+  z-index: 90;
+  min-width: $base * 20;
+  min-height: $base * 12;
+  font-weight: $semibold;
+  font-size: $base * 1.1;
+  background: #f5f5f5;
+  @include display-flex(flex);
+  @include flex-direction(column);
+  @include box-shadow(5px 5px 15px rgba(0, 0, 0, .25));
+  .popdown-btm {
+    padding: $base * 1.5;
+    background: #e6e6e6;
+    text-align: center;
+    @include box-shadow(inset 0px 2px 1px hsla(0, 0, 50, .2));
+    @include flex-shrink(0);
+    button {
+      margin: 0;
+      padding: 1px 36px 3px;
+      text-transform: uppercase;
+      font-size: 11px;
+      font-weight: $bold !important;
+    }
+  }
+  .popdown-btmpad {
+    padding: 10px;
+  }
+  .button-close {
+    position: absolute;
+    top: -44px;
+    right: 0;
+    width: 44px;
+    height: 40px;
+    line-height: 40px;
+    text-align: center;
+    .fa {
+      vertical-align: middle;
+      color: #777;
+    }
+  }
+}
+
+.popdown .datepicker {
+  margin: 24px 24px 12px;
+}
