Date selection step for freshbooks.timeentries pipe - fully working

--- a/app/templates/steps/oauth1-account-selector.html
+++ b/app/templates/steps/oauth1-account-selector.html
@@ -1,11 +1,18 @@
 <form action="" class="oauth1-account-selector">
   <div class="row">
+    <div class="small-10 columns space-after">
+      <label for="oauth1_account_name"><%= title %></label>
+    </div>
+  </div>
+  <div class="row">
     <div class="small-6 columns">
-      <input type="text" name="account_name" class="account-name" placeholder="Your freshbooks account..." />
+      <input type="text" id="oauth1_account_name" name="account_name" class="account-name" placeholder="Your freshbooks account..." />
     </div>
-    <div class="small-6 columns input-suffix">
-      .freshbooks.com
-    </div>
+    <% if(inputSuffix) { %>
+      <div class="small-4 columns input-suffix">
+        <%= inputSuffix %>
+      </div>
+    <% } %>
     <div class="small-4 columns left">
       <button class="button green primary submit">Next &raquo;</button>
     </div>
