Last import -> Last sync

--- a/app/templates/pipe-item-meta.html
+++ b/app/templates/pipe-item-meta.html
@@ -1,4 +1,4 @@
-  Last import:
+Last sync:
 <% if(model.getLastSync()) { %>
   <span class="last-sync"><%- model.getLastSyncHuman() %></span>
 <% } else { %>
